2009-01-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38665
	* gfortran.dg/host_assoc_function_5.f90: New test.

2009-01-04  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/38669
	* gfortran.dg/elemental_dependency_3.f90: New test.
	* gfortran.dg/elemental_subroutine_7.f90: New test.

2009-01-04  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/struct-ret-3.c: Include unistd.h.
	(main): Exit early if system memory page size is
	larger than 4096 bytes.

2009-01-04  Daniel Franke  <franke.daniel@gmail.com>

	PR fortran/38718
	* gfortran.dg/merge_init_expr.f90: New.

2009-01-04  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/38536
	* gfortran.dg/c_loc_tests_13.f90: New test.
	* gfortran.dg/c_loc_tests_14.f90: New test.

2009-01-03  Daniel Franke  <franke.daniel@gmail.com>

	* gfortran.dg/func_result_4.f90: New.

2009-01-03  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38594
	* gfortran.dg/host_assoc_call_3.f90: Make sure that the generic
	interface still works, in addition to original tests.
	* gfortran.dg/host_assoc_call_6.f90: New test.

2009-01-03  Jakub Jelinek  <jakub@redhat.com>

	PR c++/38705
	* g++.dg/torture/pr38705.C: New test.

	PR c/38700
	* gcc.dg/pr38700.c: New test.

2009-01-02  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/initlist11.C: New test.
	* g++.dg/cpp0x/initlist12.C: New test.

2009-01-02  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.dg/fixed-point/composite-type.c: Update wording of messages.
	Allow extra informative notes.

2009-01-01  Jakub Jelinek  <jakub@redhat.com>

	PR c/36489
	* gcc.dg/pr36489.c: New test.

2008-12-31  Daniel Franke  <franke.daniel@gmail.com>

	* gfortran.dg/mapping_2.f90: Fixed testcase.
	
2008-12-31  Jakub Jelinek  <jakub@redhat.com>

	PR c++/38647
	* g++.dg/template/function1.C: New test.

	PR c++/38640
	* g++.dg/cpp0x/decltype15.C: New test.

	PR middle-end/38676
	* gcc.dg/gomp/pr38676.c: New test.

2008-12-30  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38645