@@ -1,3 +1,9 @@
+2009-01-05  Uros Bizjak  <ubizjak@gmail.com>
+
+	* gcc.dg/compat/struct-layout-1_generate.c (dg-options): Add -mieee
+	for alpha*-*-* targets.
+	* g++.dg/compat/struct-layout-1_generate.c (dg-options): Ditto.
+
 2009-01-05  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/38665
